welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:13: error: '(' expected but identifier found.
  if nums(i)==9
     ^arrayFront9:18: error: '(' expected but identifier found.
  if n>0
     ^